--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,16 @@
         android:theme="@style/Theme.Homework"
         tools:targetApi="31">
         <activity
-            android:name=".ImageActivity2"
+            android:name=".ImageActivity5"
             android:exported="false" />
         <activity
-            android:name=".ImageActivity1"
+            android:name=".ImageActivity4"
             android:exported="false" />
+        <activity
+            android:name=".ImageActivity3"
+            android:exported="false" />
+        <activity android:name=".ImageActivity1" />
+        <activity android:name=".ImageActivity2" />
         <activity android:name=".NewActivity" />
         <activity
             android:name=".MainActivity"
